--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="container my-5">
-  <h1><i class="bi bi-airplane"></i> Ng Starter Kit</h1>
-</div>
+<router-outlet></router-outlet>
+
+@if (loader()) {
+  <app-loader />
+}
